--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
                 min-width: 450px;
                 display: flex;
                 flex-direction: column;
-                gap: 1rem;
+                gap: 6px;
                 border-radius: 10px;
             }
 
@@ -22,7 +22,8 @@
                 font-weight: 600;
                 color: #5208e5;
                 text-align: center;
-                margin-bottom: 0.5rem;
+                margin-bottom: 0;
+                margin-top: 0;
             }
             #grabElm,
             #titleInput {
@@ -56,7 +57,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 gap: 3px;
-                max-height: 200px;
+                max-height: 150px;
                 overflow-y: auto;
                 background: #fff;
                 border-radius: 10px;
@@ -83,14 +84,26 @@
             #backgroundDiv {
                 display: flex;
                 align-items: center;
+                /* justify-content: center; */
+                flex-wrap: wrap;
+                max-height: 150px;
+                background: #fff;
+                overflow-y: auto;
+                border-radius: 5px;
+                margin-top: 10px;
+                padding: 5px;
             }
             .color-box {
-                width: 40px;
-                height: 40px;
-                border: 2px solid rgba(0, 0, 0, 0.3);
+                width: 30px;
+                height: 30px;
+                border: 1px solid rgba(0, 0, 0, 0.3);
                 cursor: pointer;
-                margin: 5px;
+                margin: 3px;
                 border-radius: 5px;
+            }
+            .color-box:hover {
+                transform: scale(1.3);
+                transition: transform 0.2s;
             }
             .color-input {
                 display: inline-block;
@@ -131,7 +144,7 @@
             <button id="scanQRcode" title="Scan QR code">QR</button>
             <button id="captureText" title="Capture Text">OCR</button>
             <button id="captureImage" title="Capture Image">IMG</button>
-            <button id="delColorDiv">R</button>
+            <button id="delColorDiv" style="display: none">R</button>
         </div>
         <div class="center">
             <input id="grabElm" placeholder="elements to select..." />
